--- a/src/Stylings/About.css
+++ b/src/Stylings/About.css
@@ -46,7 +46,7 @@ header nav ul li a:hover {
 }
 
 .about-hero h1 {
-    
+    color: yellow;
     font-size: 2.5em;
     margin-bottom: 0.5em;
 }
@@ -151,6 +151,7 @@ header nav ul li a:hover {
 }
 
 .cta h2 {
+    color: yellow;
     font-size: 2em;
     margin-bottom: 0.5em;
 }
